# grpcore0

./: .gitmodules  CMakeLists.txt  README.md  angle-srcs.cmake  imgui_wrapper.cpp  mysdlmain.c  sdl2-srcs.cmake  sdl2.cmake
cmake/: Grpcore0Android.cmake  deploy_file.cmake
cmake/toolchain/: linux-rpi-sysgcc.cmake
include_sdl/emscripten/: SDL_config.h
include_sdl/posix/: SDL_config.h
include_sdl/rpi/: SDL_config.h
patch_sdl/: SDL_dynapi.h  SDL_egl_grpcore0.c
pkg/android/: .gitignore  build.gradle
pkg/android/src/main/: AndroidManifest.xml
pkg/android/src/main/java/org/libsdl/app/: SDLActivity.java
pkg/android/tv/: build.gradle  proguard-rules.pro
pkg/android/tv/src/androidTest/java/org/cltn/nmosh/grpcore0/: ApplicationTest.java
pkg/android/tv/src/main/: AndroidManifest.xml
pkg/android/tv/src/main/java/org/libsdl/app/: SDLActivity.java
pkg/android/tv/src/main/res/values/: strings.xml
pkg/emscripten/: emmain.c
